# Spade

./: .gitignore  CMakeLists.txt  README.md
assets/shaders/: Compute.comp  Fragment.frag  Rasterize.frag  Vertex.vert  [FRAGMENT]Color.frag  [FRAGMENT]Density.frag  [FRAGMENT]Velocity.frag  [FRAGMENT]Wireframe.frag  [GEOMETRY]Barycentric.geom  [SYSTEM]BitonicSort.comp  [SYSTEM]BruteForceCollision.comp  [SYSTEM]BruteForceNewtonianGravity.comp  [SYSTEM]FluidDensity.comp  [SYSTEM]FluidForce.comp  [SYSTEM]GlobalGravity.comp  [SYSTEM]GridBuild.comp  [SYSTEM]GridClear.comp  [SYSTEM]GridCollision.comp  [SYSTEM]GridOffsets.comp  [SYSTEM]GridReorder.comp  [SYSTEM]GridScatter.comp  [SYSTEM]Motion.comp  basic.frag  basic.vert
assets/shaders/raytracing/: intersect.comp  raygen.comp  shade.comp
examples/: CMakeLists.txt
examples/benchmark/: CMakeLists.txt  CubeGridCameraMove.cpp  CubeGridCubeMove.cpp  CubeGridNoMove.cpp  SingleCubeCameraMove.cpp  SingleCubeNoMove.cpp  main.cpp
examples/sandbox/: CMakeLists.txt  main.cpp  main_raster.cpp  main_rt.cpp
include/Spade/: Spade.hpp
include/Spade/Core/: Components.hpp  Engine.hpp  Enums.hpp  Objects.hpp  Physics.hpp  Primitives.hpp  Rendering.hpp  Resources.hpp
include/Spade/Systems/: CameraSystem.hpp  InteractionSystem.hpp  ScriptSystem.hpp
src/: CMakeLists.txt
src/Core/: Components.cpp  Engine.cpp  Objects.cpp  Physics.cpp  Primitives.cpp  Rendering.cpp  Resources.cpp
src/Systems/: CameraSystem.cpp  InteractionSystem.cpp  ScriptSystem.cpp
