add_executable(Benchmark_SingleCubeNoMove SingleCubeNoMove.cpp)
target_link_libraries(Benchmark_SingleCubeNoMove PRIVATE Spade)

add_executable(Benchmark_SingleCubeCameraMove SingleCubeCameraMove.cpp)
target_link_libraries(Benchmark_SingleCubeCameraMove PRIVATE Spade)

add_executable(Benchmark_CubeGridNoMove CubeGridNoMove.cpp)
target_link_libraries(Benchmark_CubeGridNoMove PRIVATE Spade)

add_executable(Benchmark_CubeGridCameraMove CubeGridCameraMove.cpp)
target_link_libraries(Benchmark_CubeGridCameraMove PRIVATE Spade)
